pagination and sorting in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=Volvo01Xbox1!
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
 
 # enable all the actuator endpoints:
 management.endpoints.web.exposure.include=*
