--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/configuration-reference
 
-# todo configure CircleCI
+# todo check CI/CD configuration!!!!!!
 
 version: 2.1
 
